--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
 	    <version>8.0.28</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.apache.commons</groupId>
-	  <artifactId>commons-dbcp2</artifactId>
-	  <version>2.9.0</version>
+	  <groupId>com.google.code.findbugs</groupId>
+	  <artifactId>jsr305</artifactId>
+	  <version>3.0.2</version>
 	</dependency>
 
 </dependencies>
