--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+			<version>3.2.2</version>
         <configuration>
           <archive>
 			<manifestEntries>
@@ -38,27 +39,29 @@
     </plugins>
   </build>
 <dependencies>
+	<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
 	<dependency>
-	  <groupId>net.bytebuddy</groupId>
-	  <artifactId>byte-buddy</artifactId>
-	  <version>LATEST</version>
+	    <groupId>net.bytebuddy</groupId>
+	    <artifactId>byte-buddy</artifactId>
+	    <version>1.12.10</version>
 	</dependency>
+<!--
 	<dependency>
 		<groupId>io.github.cdimascio</groupId>
 		<artifactId>dotenv-java</artifactId>
 		<version>2.2.0</version>
-	</dependency>
+	</dependency> -->
 	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.28</version>
 	</dependency>
-	<dependency>
+	<!--<dependency>
 	  <groupId>com.google.code.findbugs</groupId>
 	  <artifactId>jsr305</artifactId>
 	  <version>3.0.2</version>
-	</dependency>
+	</dependency> -->
 
 </dependencies>
 </project>
