--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
 
 <properties>
-     <maven.compiler.source>11</maven.compiler.source>
-     <maven.compiler.target>11</maven.compiler.target>
+     <maven.compiler.source>8</maven.compiler.source>
+     <maven.compiler.target>8</maven.compiler.target>
 </properties>
 
 <build>
@@ -39,29 +39,36 @@
     </plugins>
   </build>
 <dependencies>
-	<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>2.0.0-beta1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>2.0.0-beta1</version>
+	    <scope>test</scope>
+	</dependency>
+
+
 	<dependency>
 	    <groupId>net.bytebuddy</groupId>
 	    <artifactId>byte-buddy</artifactId>
 	    <version>1.12.10</version>
 	</dependency>
-<!--
-	<dependency>
-		<groupId>io.github.cdimascio</groupId>
-		<artifactId>dotenv-java</artifactId>
-		<version>2.2.0</version>
-	</dependency> -->
-	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.28</version>
 	</dependency>
-	<!--<dependency>
-	  <groupId>com.google.code.findbugs</groupId>
-	  <artifactId>jsr305</artifactId>
-	  <version>3.0.2</version>
-	</dependency> -->
-
+	<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+	<dependency>
+	    <groupId>com.zaxxer</groupId>
+	    <artifactId>HikariCP</artifactId>
+	    <version>5.0.1</version>
+	</dependency>
 </dependencies>
 </project>
